# mediefight

./: .gitignore  CMakeLists.txt  README.md  build.sh
res/models/: whale.stl
res/shaders/: diffuse_fs.glsl  normal_map_fs.glsl  normal_map_vs.glsl
shaders/: normal_map_fs.glsl
src/: main.cpp
src/drawable/: modelvbo.cpp  modelvbo.h  normalmap.cpp  normalmap.h  objmtlvbo.cpp  objmtlvbo.h  objvbo.cpp  objvbo.h
src/level/: level.h
src/utils/: objvbo.h  res.cpp  res.h  shader.cpp  string_utils.cpp
src/utils/graphics/: gl_utils.cpp  gl_utils.h  shader.cpp  shader.h  textures.cpp  textures.h
src/utils/parsing/: parse.cpp  parse.h
